[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/optionsdialog.png" type="Texture" id=1]
[ext_resource path="res://assets/RobotoMono-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://OptionsMenu.gd" type="Script" id=3]
[ext_resource path="res://assets/confirmoptionspressed.png" type="Texture" id=4]
[ext_resource path="res://assets/confirmoptionshover.png" type="Texture" id=5]
[ext_resource path="res://assets/confirmoptions.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[node name="OptionsMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -250.0
margin_top = -251.122
margin_right = 250.0
margin_bottom = 248.878
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedLabel" type="Label" parent="."]
margin_left = 35.2102
margin_top = 71.9187
margin_right = 120.21
margin_bottom = 109.919
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedIndicator" type="Label" parent="."]
margin_left = 35.2102
margin_top = 71.9187
margin_right = 505.0
margin_bottom = 109.919
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "6.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedSlider" type="HSlider" parent="."]
margin_left = 34.1767
margin_top = 108.839
margin_right = 506.177
margin_bottom = 124.839
min_value = 1.0
max_value = 20.0
step = 0.1
value = 6.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodLabel" type="Label" parent="."]
margin_left = 35.2102
margin_top = 141.0
margin_right = 120.21
margin_bottom = 109.919
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Food amount"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodIndicator" type="Label" parent="."]
margin_left = 35.2102
margin_top = 141.0
margin_right = 505.0
margin_bottom = 109.919
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "1"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FoodSlider" type="HSlider" parent="."]
margin_left = 34.1767
margin_top = 178.0
margin_right = 506.177
margin_bottom = 124.839
min_value = 1.0
max_value = 5.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardLabel" type="Label" parent="."]
margin_left = 35.2102
margin_top = 211.0
margin_right = 120.21
margin_bottom = 109.919
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Board size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardIndicator" type="Label" parent="."]
margin_left = 35.2102
margin_top = 211.0
margin_right = 505.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoardSlider" type="HSlider" parent="."]
margin_left = 34.1767
margin_top = 248.0
margin_right = 506.177
margin_bottom = 124.839
min_value = 4.0
max_value = 25.0
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -199.823
margin_top = 147.5
margin_right = 200.177
margin_bottom = 227.5
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="value_changed" from="SpeedSlider" to="." method="_on_SpeedSlider_value_changed"]
[connection signal="value_changed" from="FoodSlider" to="." method="_on_FoodSlider_value_changed"]
[connection signal="value_changed" from="BoardSlider" to="." method="_on_BoardSlider_value_changed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
